--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="login_button">Login</string>
+    <string name="welcome_message">Welcome to Heart Running.</string>
+    <string name="start_running">Start Running</string>
+    <string name="title_activity_main_menu">MainMenu</string>
+    <string name="title_activity_running_view">RunningView</string>
+    <string name="title_activity_post_run_view">PostRunView</string>
 
 </resources>
