--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="title_activity_running_view">RunningView</string>
     <string name="title_activity_post_run_view">PostRunView</string>
+    <string name="button_finish_run">Finish Run</string>
 
 </resources>
