Facebook login screen pops up on application start (you can login, but nothing happens at the moment)

--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_running_view">RunningView</string>
     <string name="title_activity_post_run_view">PostRunView</string>
     <string name="button_finish_run">Finish Run</string>
-
+    <string name="app_id">507710032584613</string>
+    
 </resources>
