--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_post_run_view">PostRunView</string>
     <string name="button_finish_run">Finish Run</string>
     <string name="app_id" tools:ignore="MissingTranslation">507710032584613</string>
+    <string name="bpm_text">Wait...</string>
     
 </resources>
