--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -24,5 +24,8 @@
     <string name="fat_label">Time in Fat Burning Zone:</string>
     <string name="aerobic_label">Time in Aerobic Zone:</string>
     <string name="anaerobic_label">Time in Anaerobic Zone:</string>
-
+    <string name="start_slow">Start Slow</string>
+	<string name="start_medium">Start Medium</string>
+	<string name="start_fast">Start Fast</string>
+	
 </resources>
