--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="app_name">HeartRunning</string>
+    <string name="app_name">Heart Running</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Heart Running</string>
     <string name="login_button">Login</string>
     <string name="welcome_message">Welcome to Heart Running.</string>
     <string name="start_running">Start Running</string>
-    <string name="title_activity_main_menu">MainMenu</string>
-    <string name="title_activity_running_view">RunningView</string>
-    <string name="title_activity_post_run_view">PostRunView</string>
+    <string name="title_activity_main_menu">Choose your Workout</string>
+    <string name="title_activity_running_view">Heart Running</string>
+    <string name="title_activity_post_run_view">Heart Running</string>
     <string name="button_finish_run">Finish Run</string>
     <string name="app_id" tools:ignore="MissingTranslation">507710032584613</string>
     <string name="bpm_text">Wait...</string>
-    <string name="title_activity_post_run_map_view">PostRunMapView</string>
+    <string name="title_activity_post_run_map_view">Heart Running</string>
     <string name="goto_map">Map View</string>
     <string name="distance_label">Distance:</string>
     <string name="hr_label">Average Heart Rate:</string>
     <string name="time_label">Time Taken:</string>
     <string name="back_button">Back</string>
     <string name="speed_label">Average Speed:</string>
-    <string name="fat_label">Time in Fat Burning Zone:</string>
-    <string name="aerobic_label">Time in Aerobic Zone:</string>
-    <string name="anaerobic_label">Time in Anaerobic Zone:</string>
     <string name="start_slow">Start Slow</string>
 	<string name="start_medium">Start Medium</string>
 	<string name="start_fast">Start Fast</string>
+	<string name="choose_workout">View Workout</string>
+	<string name="target_label">Time in Target HR (%):</string>
 	
 </resources>
