--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -21,9 +21,9 @@
     <string name="time_label">Time Taken:</string>
     <string name="back_button">Back</string>
     <string name="speed_label">Average Speed:</string>
-    <string name="start_slow">Start Slow</string>
-	<string name="start_medium">Start Medium</string>
-	<string name="start_fast">Start Fast</string>
+    <string name="start_slow">Steady Run</string>
+	<string name="start_medium">Medium Run</string>
+	<string name="start_fast">Fast Run</string>
 	<string name="choose_workout">View Workout</string>
 	<string name="target_label">Time in Target HR (%):</string>
 	
