--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Heart Running</string>
-    <string name="login_button">Login</string>
-    <string name="welcome_message">Welcome to Heart Running.</string>
+    <string name="login_button">Choose a Workout</string>
+    <string name="welcome_message">Welcome to Heart Running</string>
     <string name="start_running">Start Running</string>
     <string name="title_activity_main_menu">Choose your Workout</string>
     <string name="title_activity_running_view">Heart Running</string>
