--- a/HeartRunning/res/values/strings.xml
+++ b/HeartRunning/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="title_activity_running_view">Heart Running</string>
     <string name="title_activity_post_run_view">Heart Running</string>
     <string name="button_finish_run">Finish Run</string>
-    <string name="app_id" tools:ignore="MissingTranslation">507710032584613</string>
+    <string name="app_id" tools:ignore="MissingTranslation"></string>
     <string name="bpm_text">Wait...</string>
     <string name="title_activity_post_run_map_view">Heart Running</string>
     <string name="goto_map">Map View</string>
